# mpemba_new

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: equivalence_notes.md  figure_coverage.md  legacy_to_refactor_traceability.md  method_inventory.md
fig_1/: diagrams_2_without_numbers.py
fig_2/: core.py  fully_simulation_core.py  main.py
fig_3/: fig_3_main.py
fig_4/: main_visualisation.py
fig_5/: first_with_visulisation_help_old.py
fig_6/: visualisation_ENG_captions.py
fig_7/: visual_IPR_ENG_captions.py
fig_9_10_11/: 11_algoritm_visual.py  9_10_script_task_B_heatmap_ENG.py  first_mode_analys.py  random_check.py
mpemba_refactored/: __init__.py  eigensolver.py  liouvillian.py  npz_format.py  observables.py  topology.py
refactored_scripts/: multicore_main_simulation_refactored.py
rewiring_spectrum_data_npz_gemeration_for_figs/: multicore_main_simulation.py
scripts/: _bootstrap.py  fig10_random_benchmark.py  fig11_algorithm_visual.py  fig1_grouped_modes.py  fig2_projection_bars_and_modes.py  fig3_relaxation_dynamics.py  fig4_average_path_length.py  fig5_topology_and_spectrum.py  fig6_lambda_visualization.py  fig7_ipr_visualization.py  fig8_overlap.py  fig9_task_b_heatmap.py  first_mode_analysis.py  run_multicore_npz.py
src/: __init__.py
src/qdyn_research/: __init__.py  liouvillian.py  metrics.py  mpemba.py  mpemba_validation.py  network_metrics.py  npz_io.py  simulation.py  spectral.py  (+3 more)
src/qdyn_research.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_refactored_core.py  test_regression_core.py  test_smoke.py
(+3 files in other folders)
